--- a/src/styles.css
+++ b/src/styles.css
@@ -1,13 +1,69 @@
-.li {
+h1 {
+    text-align: center;
+    justify-content: center;
+    margin-bottom: 2px;
+    margin-top: 2px;
+    margin-right: 8px;
+    margin-left: 8px;
+}
+
+button {
+    position: relative;
+    background-color: transparent;
+}
+
+.header {
+    display: flex;
+    justify-content: space-between;
+    width: 200px;
+}
+
+.option {
     align-items: center;
     display: flex;
     margin: auto;
+    margin-top: 3px;
     font-size: medium;
 }
 
-.DeleteBtn {
+.deleteBtn {
     float: right;
     border-radius: 4px;
     border-color: lightgray;
     text-align: center;
+}
+
+.arrow {
+    border: solid black;
+    border-width: 0 3px 3px 0;
+    display: inline-block;
+    padding: 3px;
+}
+
+.right {
+    justify-self: right;
+    transform: rotate(-45deg);
+}
+
+.left {
+    justify-self: left;
+    transform: rotate(135deg);
+}
+
+.optionPage {
+    display: none;
+}
+
+.active {
+    display: block;
+}
+
+.exclusionTextBox {
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.exclusionList {
+    padding-left: 10px;
 }
