--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,8 @@
 h1 {
     text-align: center;
     justify-content: center;
-    margin-bottom: 2px;
-    margin-top: 2px;
-    margin-right: 8px;
-    margin-left: 8px;
+    margin-bottom: 15px;
+    margin-top: 15px;
 }
 
 button {
@@ -12,9 +10,21 @@ button {
     background-color: transparent;
 }
 
-.header {
-    display: flex;
-    justify-content: space-between;
+.prev {
+    position: absolute;
+    top: 5px;
+    left: 5px;
+    height: 50px
+}
+
+.next {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    height: 50px;
+}
+
+body {
     width: 200px;
 }
 
@@ -27,7 +37,8 @@ button {
 }
 
 .deleteBtn {
-    float: right;
+    position: absolute;
+    right: 10px;
     border-radius: 4px;
     border-color: lightgray;
     text-align: center;
@@ -66,4 +77,18 @@ button {
 
 .exclusionList {
     padding-left: 10px;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type=number]{
+    width: 30px;
+}
+
+.urlList{
+    overflow-wrap: break-word;
 }
