--- a/src/styles.css
+++ b/src/styles.css
@@ -1,13 +1,17 @@
+body {
+    border-style: solid;
+    border-color: black;
+    margin: 0px;
+    color: black;
+    background-color: rgba(8, 51, 8, 0.549);
+    width: 200px;
+}
+
 h1 {
     text-align: center;
     justify-content: center;
     margin-bottom: 15px;
-    margin-top: 15px;
-}
-
-button {
-    position: relative;
-    background-color: transparent;
+    margin-top: 12px;
 }
 
 .prev {
@@ -15,6 +19,8 @@ button {
     top: 5px;
     left: 5px;
     height: 50px;
+    background-color: transparent;
+    border-color: rgba(10, 63, 10, 0.549)
 }
 
 .next {
@@ -22,10 +28,8 @@ button {
     top: 5px;
     right: 5px;
     height: 50px;
-}
-
-body {
-    width: 200px;
+    background-color: transparent;
+    border-color: rgba(10, 63, 10, 0.549)
 }
 
 .option {
@@ -39,8 +43,14 @@ body {
     position: absolute;
     right: 10px;
     border-radius: 4px;
-    border-color: lightgray;
+    background-color: transparent;
+    border-color: transparent;
+    font-size: medium;
     text-align: center;
+}
+
+.deleteBtn:hover {
+    background-color: lightgray;
 }
 
 .arrow {
@@ -86,9 +96,13 @@ input::-webkit-inner-spin-button {
 }
 
 input[type='number'] {
-    width: 20px;
+    width: 15px;
 }
 
 input[type='text'] {
-    width: 180px;
+    width: 170px;
+}
+
+.pageContainer {
+    margin: 8px;
 }
